# hive_agent

./: Cargo.toml  cleanup_images.sh  director_config.json
docs/: API.md  CAMERA_SERVER.md  CAMERA_SERVER_SUMMARY.md  CROSS_PLATFORM_STATUS.md  DOCUMENTATION_UPDATE_SUMMARY.md  QUICKSTART.md  README.md  WARDEN.md
hive_agent-audio-player/: Cargo.toml
hive_agent-audio-player/src/: lib.rs  main.rs
hive_agent-camera-server/: Cargo.toml
hive_agent-camera-server/src/: lib.rs  main.rs
hive_agent-director/: Cargo.toml
hive_agent-director/src/: lib.rs  main.rs  main_simple.rs
hive_agent-image-to-text-generation-loop/: Cargo.toml
hive_agent-image-to-text-generation-loop/src/: lib.rs  main.rs
hive_agent-image-to-text-player-loop/: Cargo.toml
hive_agent-image-to-text-player-loop/src/: lib.rs  main.rs
hive_agent-speech-to-text-generation-loop/: Cargo.toml
hive_agent-speech-to-text-generation-loop/src/: lib.rs  main.rs
hive_agent-text-generation-loop/: Cargo.toml
hive_agent-text-player-loop/: Cargo.toml
hive_agent-text-to-speech-generation-loop/: Cargo.toml
hive_agent-text-to-speech-player-loop/: Cargo.toml
hive_agent-tools/: Cargo.toml
hive_agent-warden/: Cargo.toml
rag/: Cargo.toml
rag/src/: lib.rs  main.rs
tests/: README.md  full_system_test.sh  quick_test.sh  run_all_tests.sh  test_auto_recovery.sh  test_performance.sh  test_port_management.sh  test_report_20251028_192754.txt  test_report_20251028_194312.txt  test_report_20251028_194340.txt  test_summary_20251028_192805.txt  test_summary_20251028_194314.txt  test_summary_20251028_194351.txt
(+15 files in other folders)
